export interface Building {
  Campus: string;
  Building: string;
  Latitude: string;
  Longitude: string;
  Building_Name: string;
  Building_Long_Name: string;
  Address: string;
...
    Latitude: '45.457478',
    Longitude: '-73.640354',
  },
  {
    Campus: 'SGW',
    Building: 'CL',
    Building_Name: 'CL Building',
    Building_Long_Name: 'CL Annex',
    Address: '1665 Ste-Catherine W',
    Latitude: '45.494259',
    Longitude: '-73.579007',
  },
  {
...
    Latitude: '45.494123',
    Longitude: '-73.577870',
  },
  {
    Campus: 'LOY',
    Building: 'GE',
    Building_Name: 'GE Building',
    Building_Long_Name: 'Centre for Structural and Functional Genomics',
    Address: '7141 Sherbrooke W',
    Latitude: '45.457017',
    Longitude: '-73.640432',
  },
  {
...
    Latitude: '45.496782',
    Longitude: '-73.577358',
  },
  {
    Campus: 'SGW',
    Building: 'LD',
    Building_Name: 'LD Building',
    Building_Long_Name: 'LD Building',
    Address: '1424 Bishop Street',
    Latitude: '45.496697',
    Longitude: '-73.577312',
  },
  {
...
    Latitude: '45.496710',
    Longitude: '-73.579230',
  },
  {
    Campus: 'LOY',
    Building: 'TA',
    Building_Name: 'TA Building',
    Building_Long_Name: 'Terrebonne Building',
    Address: '7079 Terrebonne',
    Latitude: '45.459992',
    Longitude: '-73.640897',
  },
  {
...
