import { Region } from 'react-native-maps';

export const Downtown: Region = {
  latitude: 45.49563786119324,
  longitude: -73.5792038886834,
  latitudeDelta: 0.01,
  longitudeDelta: 0.01,
};

export const Loyola: Region = {
  latitude: 45.458425391521686,
  longitude: -73.638868510132,
  latitudeDelta: 0.01,
  longitudeDelta: 0.01,
};

export const POIS = [
  'Groceries',
  'Restaurants',
  'Coffee',
  'Gas',
  'Hotels',
  'ATMs',
  'Pharmacy',
  'Parks',
  'Banks',
  'Hospitals',
];
