appId: com.concordia.polaris
---
- launchApp
- assertVisible: "Campus"
# Test funcitonality of the Campus button
- tapOn: "Campus"
- assertVisible: "Downtown"
- assertVisible: "Loyola"
- assertVisible: "Campus"
# Close Campus Button
- tapOn: "Campus"
- assertVisible: "Campus"
- assertNotVisible: "Loyola"
- assertNotVisible: "Downtown"
# Head to Downtown
- tapOn: "Campus"
- assertVisible: "Downtown"
- assertVisible: "Loyola"
- assertVisible: "Campus"
- tapOn: "Downtown"
- assertVisible: "Campus"
- assertNotVisible: "Loyola"
- assertNotVisible: "Downtown"

# Head to Loyola
- tapOn: "Campus"
- assertVisible: "Downtown"
- assertVisible: "Loyola"
- assertVisible: "Campus"
- tapOn: "Loyola"
- assertVisible: "Campus"
- assertNotVisible: "Loyola"
- assertNotVisible: "Downtown"
